# NeuroWealth-Smartcontract

./: ARCHITECTURE.md  CHANGELOG.md  CONTRACT_SPEC_GENERATION_SUMMARY.md  CONTRIBUTING.md  EVENTS.md  PR_BODY_149-152.md  README.md  SECURITY.md  contract-spec.json  deny.toml  pr.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  contract-spec.yml
.kiro/specs/github-issue-templates/: .config.kiro  design.md  requirements.md  tasks.md
docs/: DEX_INTEGRATION.md  GITHUB_ISSUES.md  MAINNET_CHECKLIST.md  WASM_SIZE.md
neurowealth-vault/: Cargo.toml
neurowealth-vault/contracts/vault/: Cargo.toml
neurowealth-vault/contracts/vault/src/: lib.rs  test.rs
neurowealth-vault/contracts/vault/src/tests/: mod.rs  test_access_control.rs  test_auth.rs  test_balance_shares_invariant.rs  test_blend_devnet.rs  test_blend_integration.rs  test_budget.rs  test_checked_arithmetic.rs  test_event_payloads.rs  test_event_schema.rs  test_events.rs  test_initialize.rs  test_legacy_inline.rs  test_limits.rs  test_math_limits.rs  test_pause.rs  test_rebalance.rs  test_rebalance_cooldown.rs  test_rebalance_integration.rs  test_rounding_math.rs  test_total_assets_cap.rs  test_ttl.rs  test_update_total_assets_blend.rs  test_withdraw.rs  test_yield.rs  utils.rs
neurowealth-vault/fuzz/: Cargo.toml
neurowealth-vault/fuzz/fuzz_targets/: deposit_withdraw_sequence.rs
scripts/: README-SPEC.md  deploy-devnet.sh  e2e-devnet.sh  generate-contract-spec.rs  generate-spec.py  validate-spec.py  verify-deployment.sh
(+1 files in other folders)
